# peg-pack

./: Cargo.toml  LICENSE  README.md
docs/: .prettierignore  docusaurus.config.js  package-lock.json  package.json
docs/docs/: 03-features.md  03-features.mdx  04-security.mdx
examples/: json.js  recovering-json.js  strict-json.js
scripts/: generate-docs.js
src/: cli.rs  generation.rs  lib.rs  loader.rs  main.rs  ordered_set.rs  output.rs  store.rs
src/core/: character.rs  expected.rs  fixed_point.rs  generation.rs  graphvis.rs  load.rs  loader.rs  mod.rs  optimization.rs  series.rs  structure.rs  validation.rs  walk.rs
src/include/: harness.rs  loader.d.ts  loader.js
src/runtime/: array_vec.rs  buffered_iter.rs  cache.rs  context.rs  grammar.rs  input.rs  mod.rs  refc.rs  result.rs  small_vec.rs  stack.rs
tests/: integration.rs
tests/cases/: cache_insertion_high_cost.expected.json  cache_insertion_high_cost.input.json  cache_insertion_low_cost.expected.json  cache_insertion_low_cost.input.json  character_replacement_reachable_annotations.expected.json  character_replacement_reachable_annotations.input.json  character_replacement_unreachable_annotations.expected.json  character_replacement_unreachable_annotations.input.json  concatenate_series.expected.json  concatenate_series.input.json  deduplicate_class.expected.json  deduplicate_class.input.json  deduplicate_component_instructions.expected.json  deduplicate_component_instructions.input.json  deduplicate_components.expected.json  deduplicate_components.input.json  deduplicate_label.expected.json  deduplicate_label.input.json  deduplicate_rotated_components.expected.json  deduplicate_rotated_components.input.json  (+47 more)
(+31 files in other folders)
