[package]
name = "peg-pack"
version = "0.1.0"
authors = ["Llew Vallis <llewvallis@gmail.com>"]
edition = "2021"
description = "Versatile parser generator for PEG grammars"
homepage = "https://peg-pack.netlify.app"
documentation = "https://peg-pack.netlify.app"
readme = "README.md"
repository = "https://github.com/LlewVallis/peg-pack"
license = "MIT"
keywords = ["peg"]
categories = ["parsing", "command-line-utilities"]
exclude = ["docs", "scripts"]

[dependencies]
bimap = "0.6.2"
seahash = "4.1"
termcolor = "1.1"
clap = { version = "4.0", features = ["cargo", "derive"] }
atty = "0.2.14"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"